parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes_externas
Rule 2     lista_declaracoes_externas -> declaracao_externa
Rule 3     lista_declaracoes_externas -> lista_declaracoes_externas declaracao_externa
Rule 4     declaracao_externa -> declaracao_tipo
Rule 5     declaracao_externa -> declaracao_funcao
Rule 6     declaracao_externa -> declaracao_variavel
Rule 7     tipo -> INTEGER
Rule 8     tipo -> CHAR
Rule 9     tipo -> BOOLEAN
Rule 10    tipo -> STRING
Rule 11    tipo -> IDU
Rule 12    declaracao_tipo -> TYPE IDD EQUALS ARRAY LEFT_SQUARE NUMERAL RIGHT_SQUARE OF tipo
Rule 13    declaracao_tipo -> TYPE IDD EQUALS STRUCT LEFT_BRACES declaracao_campos RIGHT_BRACES
Rule 14    declaracao_tipo -> TYPE IDD EQUALS tipo
Rule 15    declaracao_campos -> declaracao_campos SEMI_COLON lista_identificadores COLON tipo
Rule 16    declaracao_campos -> lista_identificadores COLON tipo
Rule 17    declaracao_funcao -> FUNCTION IDD LEFT_PARENTHESIS lista_parametros RIGHT_PARENTHESIS COLON tipo bloco
Rule 18    lista_parametros -> lista_parametros COMMA IDD COLON tipo
Rule 19    lista_parametros -> IDD COLON tipo
Rule 20    bloco -> LEFT_BRACES lista_declaracao_variaveis lista_comandos RIGHT_BRACES
Rule 21    lista_declaracao_variaveis -> lista_declaracao_variaveis declaracao_variavel
Rule 22    lista_declaracao_variaveis -> declaracao_variavel
Rule 23    lista_comandos -> lista_comandos comando
Rule 24    lista_comandos -> comando
Rule 25    declaracao_variavel -> VAR lista_identificadores COLON tipo SEMI_COLON
Rule 26    lista_identificadores -> lista_identificadores COMMA IDD
Rule 27    lista_identificadores -> IDD
Rule 28    comando -> IF LEFT_PARENTHESIS expressao RIGHT_PARENTHESIS comando
Rule 29    comando -> IF LEFT_PARENTHESIS expressao RIGHT_PARENTHESIS comando ELSE comando
Rule 30    comando -> WHILE LEFT_PARENTHESIS expressao RIGHT_PARENTHESIS comando
Rule 31    comando -> DO comando WHILE LEFT_PARENTHESIS expressao RIGHT_PARENTHESIS SEMI_COLON
Rule 32    comando -> bloco
Rule 33    comando -> valor_esquerdo EQUALS expressao SEMI_COLON
Rule 34    comando -> BREAK SEMI_COLON
Rule 35    comando -> CONTINUE SEMI_COLON
Rule 36    expressao -> expressao AND expressao_l
Rule 37    expressao -> expressao OR expressao_l
Rule 38    expressao -> expressao_l
Rule 39    expressao_l -> expressao_l LESS_THAN expressao_r
Rule 40    expressao_l -> expressao_l LESS_OR_EQUAL expressao_r
Rule 41    expressao_l -> expressao_l GREATER_THAN expressao_r
Rule 42    expressao_l -> expressao_l GREATER_OR_EQUAL expressao_r
Rule 43    expressao_l -> expressao_l EQUAL_EQUAL expressao_r
Rule 44    expressao_l -> expressao_l NOT_EQUAL expressao_r
Rule 45    expressao_l -> expressao_r
Rule 46    expressao_r -> expressao_r PLUS expressao_y
Rule 47    expressao_r -> expressao_r MINUS expressao_y
Rule 48    expressao_r -> expressao_y
Rule 49    expressao_y -> expressao_y TIMES expressao_f
Rule 50    expressao_y -> expressao_y DIVIDE expressao_f
Rule 51    expressao_y -> expressao_f
Rule 52    expressao_f -> valor_esquerdo
Rule 53    expressao_f -> PLUS_PLUS valor_esquerdo
Rule 54    expressao_f -> MINUS_MINUS valor_esquerdo
Rule 55    expressao_f -> valor_esquerdo PLUS_PLUS
Rule 56    expressao_f -> valor_esquerdo MINUS_MINUS
Rule 57    expressao_f -> LEFT_PARENTHESIS expressao RIGHT_PARENTHESIS
Rule 58    expressao_f -> IDU LEFT_PARENTHESIS lista_expressoes RIGHT_PARENTHESIS
Rule 59    expressao_f -> MINUS expressao_f
Rule 60    expressao_f -> NOT expressao_f
Rule 61    expressao_f -> TRUE
Rule 62    expressao_f -> FALSE
Rule 63    expressao_f -> CHARACTER
Rule 64    expressao_f -> STRINGVAL
Rule 65    expressao_f -> NUMERAL
Rule 66    lista_expressoes -> lista_expressoes COMMA expressao
Rule 67    lista_expressoes -> expressao
Rule 68    valor_esquerdo -> valor_esquerdo DOT IDU
Rule 69    valor_esquerdo -> valor_esquerdo LEFT_SQUARE expressao RIGHT_SQUARE
Rule 70    valor_esquerdo -> IDU

Terminals, with rules where they appear

AND                  : 36
ARRAY                : 12
BOOLEAN              : 9
BREAK                : 34
CHAR                 : 8
CHARACTER            : 63
COLON                : 15 16 17 18 19 25
COMMA                : 18 26 66
CONTINUE             : 35
DIVIDE               : 50
DO                   : 31
DOT                  : 68
ELSE                 : 29
EQUALS               : 12 13 14 33
EQUAL_EQUAL          : 43
FALSE                : 62
FUNCTION             : 17
GREATER_OR_EQUAL     : 42
GREATER_THAN         : 41
IDD                  : 12 13 14 17 18 19 26 27
IDU                  : 11 58 68 70
IF                   : 28 29
INTEGER              : 7
LEFT_BRACES          : 13 20
LEFT_PARENTHESIS     : 17 28 29 30 31 57 58
LEFT_SQUARE          : 12 69
LESS_OR_EQUAL        : 40
LESS_THAN            : 39
MINUS                : 47 59
MINUS_MINUS          : 54 56
NOT                  : 60
NOT_EQUAL            : 44
NUMERAL              : 12 65
OF                   : 12
OR                   : 37
PLUS                 : 46
PLUS_PLUS            : 53 55
RIGHT_BRACES         : 13 20
RIGHT_PARENTHESIS    : 17 28 29 30 31 57 58
RIGHT_SQUARE         : 12 69
SEMI_COLON           : 15 25 31 33 34 35
STRING               : 10
STRINGVAL            : 64
STRUCT               : 13
TIMES                : 49
TRUE                 : 61
TYPE                 : 12 13 14
VAR                  : 25
WHILE                : 30 31
error                : 

Nonterminals, with rules where they appear

bloco                : 17 32
comando              : 23 24 28 29 29 30 31
declaracao_campos    : 13 15
declaracao_externa   : 2 3
declaracao_funcao    : 5
declaracao_tipo      : 4
declaracao_variavel  : 6 21 22
expressao            : 28 29 30 31 33 36 37 57 66 67 69
expressao_f          : 49 50 51 59 60
expressao_l          : 36 37 38 39 40 41 42 43 44
expressao_r          : 39 40 41 42 43 44 45 46 47
expressao_y          : 46 47 48 49 50
lista_comandos       : 20 23
lista_declaracao_variaveis : 20 21
lista_declaracoes_externas : 1 3
lista_expressoes     : 58 66
lista_identificadores : 15 16 25 26
lista_parametros     : 17 18
programa             : 0
tipo                 : 12 14 15 16 17 18 19 25
valor_esquerdo       : 33 52 53 54 55 56 68 69

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes_externas
    (2) lista_declaracoes_externas -> . declaracao_externa
    (3) lista_declaracoes_externas -> . lista_declaracoes_externas declaracao_externa
    (4) declaracao_externa -> . declaracao_tipo
    (5) declaracao_externa -> . declaracao_funcao
    (6) declaracao_externa -> . declaracao_variavel
    (12) declaracao_tipo -> . TYPE IDD EQUALS ARRAY LEFT_SQUARE NUMERAL RIGHT_SQUARE OF tipo
    (13) declaracao_tipo -> . TYPE IDD EQUALS STRUCT LEFT_BRACES declaracao_campos RIGHT_BRACES
    (14) declaracao_tipo -> . TYPE IDD EQUALS tipo
    (17) declaracao_funcao -> . FUNCTION IDD LEFT_PARENTHESIS lista_parametros RIGHT_PARENTHESIS COLON tipo bloco
    (25) declaracao_variavel -> . VAR lista_identificadores COLON tipo SEMI_COLON

    TYPE            shift and go to state 7
    FUNCTION        shift and go to state 8
    VAR             shift and go to state 9

    programa                       shift and go to state 1
    lista_declaracoes_externas     shift and go to state 2
    declaracao_externa             shift and go to state 3
    declaracao_tipo                shift and go to state 4
    declaracao_funcao              shift and go to state 5
    declaracao_variavel            shift and go to state 6

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_declaracoes_externas .
    (3) lista_declaracoes_externas -> lista_declaracoes_externas . declaracao_externa
    (4) declaracao_externa -> . declaracao_tipo
    (5) declaracao_externa -> . declaracao_funcao
    (6) declaracao_externa -> . declaracao_variavel
    (12) declaracao_tipo -> . TYPE IDD EQUALS ARRAY LEFT_SQUARE NUMERAL RIGHT_SQUARE OF tipo
    (13) declaracao_tipo -> . TYPE IDD EQUALS STRUCT LEFT_BRACES declaracao_campos RIGHT_BRACES
    (14) declaracao_tipo -> . TYPE IDD EQUALS tipo
    (17) declaracao_funcao -> . FUNCTION IDD LEFT_PARENTHESIS lista_parametros RIGHT_PARENTHESIS COLON tipo bloco
    (25) declaracao_variavel -> . VAR lista_identificadores COLON tipo SEMI_COLON

    $end            reduce using rule 1 (programa -> lista_declaracoes_externas .)
    TYPE            shift and go to state 7
    FUNCTION        shift and go to state 8
    VAR             shift and go to state 9

    declaracao_externa             shift and go to state 10
    declaracao_tipo                shift and go to state 4
    declaracao_funcao              shift and go to state 5
    declaracao_variavel            shift and go to state 6

state 3

    (2) lista_declaracoes_externas -> declaracao_externa .

    TYPE            reduce using rule 2 (lista_declaracoes_externas -> declaracao_externa .)
    FUNCTION        reduce using rule 2 (lista_declaracoes_externas -> declaracao_externa .)
    VAR             reduce using rule 2 (lista_declaracoes_externas -> declaracao_externa .)
    $end            reduce using rule 2 (lista_declaracoes_externas -> declaracao_externa .)


state 4

    (4) declaracao_externa -> declaracao_tipo .

    TYPE            reduce using rule 4 (declaracao_externa -> declaracao_tipo .)
    FUNCTION        reduce using rule 4 (declaracao_externa -> declaracao_tipo .)
    VAR             reduce using rule 4 (declaracao_externa -> declaracao_tipo .)
    $end            reduce using rule 4 (declaracao_externa -> declaracao_tipo .)


state 5

    (5) declaracao_externa -> declaracao_funcao .

    TYPE            reduce using rule 5 (declaracao_externa -> declaracao_funcao .)
    FUNCTION        reduce using rule 5 (declaracao_externa -> declaracao_funcao .)
    VAR             reduce using rule 5 (declaracao_externa -> declaracao_funcao .)
    $end            reduce using rule 5 (declaracao_externa -> declaracao_funcao .)


state 6

    (6) declaracao_externa -> declaracao_variavel .

    TYPE            reduce using rule 6 (declaracao_externa -> declaracao_variavel .)
    FUNCTION        reduce using rule 6 (declaracao_externa -> declaracao_variavel .)
    VAR             reduce using rule 6 (declaracao_externa -> declaracao_variavel .)
    $end            reduce using rule 6 (declaracao_externa -> declaracao_variavel .)


state 7

    (12) declaracao_tipo -> TYPE . IDD EQUALS ARRAY LEFT_SQUARE NUMERAL RIGHT_SQUARE OF tipo
    (13) declaracao_tipo -> TYPE . IDD EQUALS STRUCT LEFT_BRACES declaracao_campos RIGHT_BRACES
    (14) declaracao_tipo -> TYPE . IDD EQUALS tipo

    IDD             shift and go to state 11


state 8

    (17) declaracao_funcao -> FUNCTION . IDD LEFT_PARENTHESIS lista_parametros RIGHT_PARENTHESIS COLON tipo bloco

    IDD             shift and go to state 12


state 9

    (25) declaracao_variavel -> VAR . lista_identificadores COLON tipo SEMI_COLON
    (26) lista_identificadores -> . lista_identificadores COMMA IDD
    (27) lista_identificadores -> . IDD

    IDD             shift and go to state 14

    lista_identificadores          shift and go to state 13

state 10

    (3) lista_declaracoes_externas -> lista_declaracoes_externas declaracao_externa .

    TYPE            reduce using rule 3 (lista_declaracoes_externas -> lista_declaracoes_externas declaracao_externa .)
    FUNCTION        reduce using rule 3 (lista_declaracoes_externas -> lista_declaracoes_externas declaracao_externa .)
    VAR             reduce using rule 3 (lista_declaracoes_externas -> lista_declaracoes_externas declaracao_externa .)
    $end            reduce using rule 3 (lista_declaracoes_externas -> lista_declaracoes_externas declaracao_externa .)


state 11

    (12) declaracao_tipo -> TYPE IDD . EQUALS ARRAY LEFT_SQUARE NUMERAL RIGHT_SQUARE OF tipo
    (13) declaracao_tipo -> TYPE IDD . EQUALS STRUCT LEFT_BRACES declaracao_campos RIGHT_BRACES
    (14) declaracao_tipo -> TYPE IDD . EQUALS tipo

    EQUALS          shift and go to state 15


state 12

    (17) declaracao_funcao -> FUNCTION IDD . LEFT_PARENTHESIS lista_parametros RIGHT_PARENTHESIS COLON tipo bloco

    LEFT_PARENTHESIS shift and go to state 16


state 13

    (25) declaracao_variavel -> VAR lista_identificadores . COLON tipo SEMI_COLON
    (26) lista_identificadores -> lista_identificadores . COMMA IDD

    COLON           shift and go to state 17
    COMMA           shift and go to state 18


state 14

    (27) lista_identificadores -> IDD .

    COLON           reduce using rule 27 (lista_identificadores -> IDD .)
    COMMA           reduce using rule 27 (lista_identificadores -> IDD .)


state 15

    (12) declaracao_tipo -> TYPE IDD EQUALS . ARRAY LEFT_SQUARE NUMERAL RIGHT_SQUARE OF tipo
    (13) declaracao_tipo -> TYPE IDD EQUALS . STRUCT LEFT_BRACES declaracao_campos RIGHT_BRACES
    (14) declaracao_tipo -> TYPE IDD EQUALS . tipo
    (7) tipo -> . INTEGER
    (8) tipo -> . CHAR
    (9) tipo -> . BOOLEAN
    (10) tipo -> . STRING
    (11) tipo -> . IDU

    ARRAY           shift and go to state 19
    STRUCT          shift and go to state 21
    INTEGER         shift and go to state 22
    CHAR            shift and go to state 23
    BOOLEAN         shift and go to state 24
    STRING          shift and go to state 25
    IDU             shift and go to state 26

    tipo                           shift and go to state 20

state 16

    (17) declaracao_funcao -> FUNCTION IDD LEFT_PARENTHESIS . lista_parametros RIGHT_PARENTHESIS COLON tipo bloco
    (18) lista_parametros -> . lista_parametros COMMA IDD COLON tipo
    (19) lista_parametros -> . IDD COLON tipo

    IDD             shift and go to state 27

    lista_parametros               shift and go to state 28

state 17

    (25) declaracao_variavel -> VAR lista_identificadores COLON . tipo SEMI_COLON
    (7) tipo -> . INTEGER
    (8) tipo -> . CHAR
    (9) tipo -> . BOOLEAN
    (10) tipo -> . STRING
    (11) tipo -> . IDU

    INTEGER         shift and go to state 22
    CHAR            shift and go to state 23
    BOOLEAN         shift and go to state 24
    STRING          shift and go to state 25
    IDU             shift and go to state 26

    tipo                           shift and go to state 29

state 18

    (26) lista_identificadores -> lista_identificadores COMMA . IDD

    IDD             shift and go to state 30


state 19

    (12) declaracao_tipo -> TYPE IDD EQUALS ARRAY . LEFT_SQUARE NUMERAL RIGHT_SQUARE OF tipo

    LEFT_SQUARE     shift and go to state 31


state 20

    (14) declaracao_tipo -> TYPE IDD EQUALS tipo .

    TYPE            reduce using rule 14 (declaracao_tipo -> TYPE IDD EQUALS tipo .)
    FUNCTION        reduce using rule 14 (declaracao_tipo -> TYPE IDD EQUALS tipo .)
    VAR             reduce using rule 14 (declaracao_tipo -> TYPE IDD EQUALS tipo .)
    $end            reduce using rule 14 (declaracao_tipo -> TYPE IDD EQUALS tipo .)


state 21

    (13) declaracao_tipo -> TYPE IDD EQUALS STRUCT . LEFT_BRACES declaracao_campos RIGHT_BRACES

    LEFT_BRACES     shift and go to state 32


state 22

    (7) tipo -> INTEGER .

    TYPE            reduce using rule 7 (tipo -> INTEGER .)
    FUNCTION        reduce using rule 7 (tipo -> INTEGER .)
    VAR             reduce using rule 7 (tipo -> INTEGER .)
    $end            reduce using rule 7 (tipo -> INTEGER .)
    SEMI_COLON      reduce using rule 7 (tipo -> INTEGER .)
    RIGHT_PARENTHESIS reduce using rule 7 (tipo -> INTEGER .)
    COMMA           reduce using rule 7 (tipo -> INTEGER .)
    LEFT_BRACES     reduce using rule 7 (tipo -> INTEGER .)
    RIGHT_BRACES    reduce using rule 7 (tipo -> INTEGER .)


state 23

    (8) tipo -> CHAR .

    TYPE            reduce using rule 8 (tipo -> CHAR .)
    FUNCTION        reduce using rule 8 (tipo -> CHAR .)
    VAR             reduce using rule 8 (tipo -> CHAR .)
    $end            reduce using rule 8 (tipo -> CHAR .)
    SEMI_COLON      reduce using rule 8 (tipo -> CHAR .)
    RIGHT_PARENTHESIS reduce using rule 8 (tipo -> CHAR .)
    COMMA           reduce using rule 8 (tipo -> CHAR .)
    LEFT_BRACES     reduce using rule 8 (tipo -> CHAR .)
    RIGHT_BRACES    reduce using rule 8 (tipo -> CHAR .)


state 24

    (9) tipo -> BOOLEAN .

    TYPE            reduce using rule 9 (tipo -> BOOLEAN .)
    FUNCTION        reduce using rule 9 (tipo -> BOOLEAN .)
    VAR             reduce using rule 9 (tipo -> BOOLEAN .)
    $end            reduce using rule 9 (tipo -> BOOLEAN .)
    SEMI_COLON      reduce using rule 9 (tipo -> BOOLEAN .)
    RIGHT_PARENTHESIS reduce using rule 9 (tipo -> BOOLEAN .)
    COMMA           reduce using rule 9 (tipo -> BOOLEAN .)
    LEFT_BRACES     reduce using rule 9 (tipo -> BOOLEAN .)
    RIGHT_BRACES    reduce using rule 9 (tipo -> BOOLEAN .)


state 25

    (10) tipo -> STRING .

    TYPE            reduce using rule 10 (tipo -> STRING .)
    FUNCTION        reduce using rule 10 (tipo -> STRING .)
    VAR             reduce using rule 10 (tipo -> STRING .)
    $end            reduce using rule 10 (tipo -> STRING .)
    SEMI_COLON      reduce using rule 10 (tipo -> STRING .)
    RIGHT_PARENTHESIS reduce using rule 10 (tipo -> STRING .)
    COMMA           reduce using rule 10 (tipo -> STRING .)
    LEFT_BRACES     reduce using rule 10 (tipo -> STRING .)
    RIGHT_BRACES    reduce using rule 10 (tipo -> STRING .)


state 26

    (11) tipo -> IDU .

    TYPE            reduce using rule 11 (tipo -> IDU .)
    FUNCTION        reduce using rule 11 (tipo -> IDU .)
    VAR             reduce using rule 11 (tipo -> IDU .)
    $end            reduce using rule 11 (tipo -> IDU .)
    SEMI_COLON      reduce using rule 11 (tipo -> IDU .)
    RIGHT_PARENTHESIS reduce using rule 11 (tipo -> IDU .)
    COMMA           reduce using rule 11 (tipo -> IDU .)
    LEFT_BRACES     reduce using rule 11 (tipo -> IDU .)
    RIGHT_BRACES    reduce using rule 11 (tipo -> IDU .)


state 27

    (19) lista_parametros -> IDD . COLON tipo

    COLON           shift and go to state 33


state 28

    (17) declaracao_funcao -> FUNCTION IDD LEFT_PARENTHESIS lista_parametros . RIGHT_PARENTHESIS COLON tipo bloco
    (18) lista_parametros -> lista_parametros . COMMA IDD COLON tipo

    RIGHT_PARENTHESIS shift and go to state 34
    COMMA           shift and go to state 35


state 29

    (25) declaracao_variavel -> VAR lista_identificadores COLON tipo . SEMI_COLON

    SEMI_COLON      shift and go to state 36


state 30

    (26) lista_identificadores -> lista_identificadores COMMA IDD .

    COLON           reduce using rule 26 (lista_identificadores -> lista_identificadores COMMA IDD .)
    COMMA           reduce using rule 26 (lista_identificadores -> lista_identificadores COMMA IDD .)


state 31

    (12) declaracao_tipo -> TYPE IDD EQUALS ARRAY LEFT_SQUARE . NUMERAL RIGHT_SQUARE OF tipo

    NUMERAL         shift and go to state 37


state 32

    (13) declaracao_tipo -> TYPE IDD EQUALS STRUCT LEFT_BRACES . declaracao_campos RIGHT_BRACES
    (15) declaracao_campos -> . declaracao_campos SEMI_COLON lista_identificadores COLON tipo
    (16) declaracao_campos -> . lista_identificadores COLON tipo
    (26) lista_identificadores -> . lista_identificadores COMMA IDD
    (27) lista_identificadores -> . IDD

    IDD             shift and go to state 14

    declaracao_campos              shift and go to state 38
    lista_identificadores          shift and go to state 39

state 33

    (19) lista_parametros -> IDD COLON . tipo
    (7) tipo -> . INTEGER
    (8) tipo -> . CHAR
    (9) tipo -> . BOOLEAN
    (10) tipo -> . STRING
    (11) tipo -> . IDU

    INTEGER         shift and go to state 22
    CHAR            shift and go to state 23
    BOOLEAN         shift and go to state 24
    STRING          shift and go to state 25
    IDU             shift and go to state 26

    tipo                           shift and go to state 40

state 34

    (17) declaracao_funcao -> FUNCTION IDD LEFT_PARENTHESIS lista_parametros RIGHT_PARENTHESIS . COLON tipo bloco

    COLON           shift and go to state 41


state 35

    (18) lista_parametros -> lista_parametros COMMA . IDD COLON tipo

    IDD             shift and go to state 42


state 36

    (25) declaracao_variavel -> VAR lista_identificadores COLON tipo SEMI_COLON .

    TYPE            reduce using rule 25 (declaracao_variavel -> VAR lista_identificadores COLON tipo SEMI_COLON .)
    FUNCTION        reduce using rule 25 (declaracao_variavel -> VAR lista_identificadores COLON tipo SEMI_COLON .)
    VAR             reduce using rule 25 (declaracao_variavel -> VAR lista_identificadores COLON tipo SEMI_COLON .)
    $end            reduce using rule 25 (declaracao_variavel -> VAR lista_identificadores COLON tipo SEMI_COLON .)
    IF              reduce using rule 25 (declaracao_variavel -> VAR lista_identificadores COLON tipo SEMI_COLON .)
    WHILE           reduce using rule 25 (declaracao_variavel -> VAR lista_identificadores COLON tipo SEMI_COLON .)
    DO              reduce using rule 25 (declaracao_variavel -> VAR lista_identificadores COLON tipo SEMI_COLON .)
    BREAK           reduce using rule 25 (declaracao_variavel -> VAR lista_identificadores COLON tipo SEMI_COLON .)
    CONTINUE        reduce using rule 25 (declaracao_variavel -> VAR lista_identificadores COLON tipo SEMI_COLON .)
    LEFT_BRACES     reduce using rule 25 (declaracao_variavel -> VAR lista_identificadores COLON tipo SEMI_COLON .)
    IDU             reduce using rule 25 (declaracao_variavel -> VAR lista_identificadores COLON tipo SEMI_COLON .)


state 37

    (12) declaracao_tipo -> TYPE IDD EQUALS ARRAY LEFT_SQUARE NUMERAL . RIGHT_SQUARE OF tipo

    RIGHT_SQUARE    shift and go to state 43


state 38

    (13) declaracao_tipo -> TYPE IDD EQUALS STRUCT LEFT_BRACES declaracao_campos . RIGHT_BRACES
    (15) declaracao_campos -> declaracao_campos . SEMI_COLON lista_identificadores COLON tipo

    RIGHT_BRACES    shift and go to state 44
    SEMI_COLON      shift and go to state 45


state 39

    (16) declaracao_campos -> lista_identificadores . COLON tipo
    (26) lista_identificadores -> lista_identificadores . COMMA IDD

    COLON           shift and go to state 46
    COMMA           shift and go to state 18


state 40

    (19) lista_parametros -> IDD COLON tipo .
